@@ -10,6 +10,10 @@ plugins {
 group = 'com.ead.payments'
 version = '0.0.1-SNAPSHOT'
 
+tasks.withType(JavaCompile) {
+	options.compilerArgs += '--enable-preview'
+}
+
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
@@ -52,6 +56,7 @@ dependencies {
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.springframework.modulith:spring-modulith-events-amqp'
@@ -69,8 +74,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-
 	implementation 'com.google.guava:guava:33.2.1-jre'
+	implementation 'org.apache.commons:commons-collections4:4.4'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 dependencyManagement {
@@ -80,6 +86,8 @@ dependencyManagement {
 }
 
 test {
+	jvmArgs += '--enable-preview'
+
 	useJUnitPlatform()
 	testLogging {
 		events "skipped", "failed"
